--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
