--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["dom", "es2015"],
+    "lib": ["dom", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
 
