--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "~/*": ["src/*"],
+      "~types/*": ["types/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -25,6 +26,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
