--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
-      "~types/*": ["types/*"]
+      "@/*": ["src/*"],
+      "@appTypes/*": ["types/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -26,9 +26,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ],
+  "include": ["src", "types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
