--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "new-sheet",
-  "private": true,
-  "version": "0.0.0",
+  "name": "mottem-sheet",
+  "version": "0.0.1",
+  "license": "MIT",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/mottem-sheet.umd.cjs",
+  "module": "./dist/mottem-sheet.js",
+  "exports": {
+    ".": {
+      "import": "./dist/my-lib.js",
+      "require": "./dist/my-lib.umd.cjs"
+    }
+  },
+  "author": "Mohammad Sadeghian <mo.sdghn@gmail.com>",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -18,6 +30,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
@@ -31,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-dts": "^3.7.3"
   }
 }
