--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mottem-sheet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "type": "module",
   "files": [
     "dist"
   ],
   "main": "./dist/mottem-sheet.umd.cjs",
-  "module": "./dist/mottem-sheet.js",
+  "module": "./dist/mottem-sheet.es.js",
   "exports": {
     ".": {
       "import": "./dist/my-lib.js",
