--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mottem-sheet",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "license": "MIT",
   "type": "module",
   "files": [
