[chore] add git repository to package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Mohammad Sadeghian <mo.sdghn@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mhmd-sdghn/mottem-sheet"
+    "url": "https://github.com/mhmd-sdghn/mottem-sheet.git"
   },
   "scripts": {
     "dev": "vite",
