--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
+  "keywords": ["bottom-drawer" , "bottom-sheet" , "bottomsheet" , "drawer", "dialog", "popup", "react", "modal", "overlay", "draggableview"],
   "files": [
     "dist"
   ],
