--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@use-gesture/react": "^10.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
-    "styled-components": "^5.0.0 || ^6.0.0"
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -61,8 +62,7 @@
     "@react-spring/web": "^9.7.3",
     "@use-gesture/react": "^10.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
