--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
   "types": "./dist/mottem-sheet.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "default": "./dist/mottem-sheet.js",
-        "types": "./dist/mottem-sheet.d.ts"
-      },
-      "require": "./dist/mottem-sheet.umd.cjs"
+      "import": "./dist/mottem-sheet.js",
+      "require": "./dist/mottem-sheet.umd.cjs",
+      "default": "./dist/mottem-sheet.js",
+      "types": "./dist/mottem-sheet.d.ts"
     },
     "./package.json": "./package.json"
   },
