[refactor] add offsetUp and offsetDown to improve DX

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mottem-sheet",
-  "version": "1.1.13",
+  "version": "1.1.16-alpha2",
   "license": "MIT",
   "type": "module",
   "keywords": [
