--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mottem-sheet",
-  "version": "1.1.16-alpha6",
+  "version": "1.1.16-beta",
   "license": "MIT",
   "type": "module",
   "keywords": [
