--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mottem-sheet",
-  "version": "1.1.16-beta",
+  "version": "1.1.16",
   "license": "MIT",
   "type": "module",
   "keywords": [
@@ -46,7 +46,7 @@
     "build": "tsc -p tsconfig.build.json && vite build",
     "build:vercel": "tsc && vite build --config vite.config.vercel.ts ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3000 --host",
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
