--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "dev": "vite",
     "build": "tsc -p tsconfig.build.json && vite build",
     "build:vercel": "tsc && vite build --config vite.config.vercel.ts ",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier . --write",
+    "lint": "eslint --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 3000 --host",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn prettier; yarn lint; yarn build"
   },
   "peerDependencies": {
     "@emotion/react": "^11.0.0",
